Fixed double scroll bar.

--- a/sass/_custom.scss
+++ b/sass/_custom.scss
@@ -4,7 +4,8 @@
 $theme-color: #3a1c74;
 
 body {
-  overflow-y: scroll;
+  width: 100%;
+  height: 100%;
   background: url('/static/images/white_brick_wall.png');
 }
 
