--- a/static/stylesheets/screen.css
+++ b/static/stylesheets/screen.css
@@ -1841,7 +1841,7 @@ body .video.twitch, body .video.youtube.show_controls { padding-top: 30px; }
 .modal.active { z-index: 999999; }
 .modal.active, .modal.active > .content { filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=100); opacity: 1; }
 
-body { overflow-y: scroll; background: url("/static/images/white_brick_wall.png"); }
+body { width: 100%; height: 100%; background: url("/static/images/white_brick_wall.png"); }
 
 table { margin-bottom: 1em; width: 100%; }
 table td, table th { border: solid 1px #cccccc; padding: 10px; }
